--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,43 @@
 csv_file.csv
 keepvars_GTS_xml_v2.ipynb
 edit_metadata_saildrone-original.ipynb
-keepvars_GTS_xml_v2.py~
 edit_xml_repointing.ipynb
 keepvars_GTS_xml_v3.ipynb
 edit_xml_saildrone.ipynb
 edit_xml_saildrone_newintake.ipynb
-keepvars_GTS_xml_v3.py~
 edit_xml_saildrone_newintake.py
 mission_csvs
-edit_xml_saildrone_newintake.py~
 oldmeta_printproof
 edit_xml_saildrone_newintake_trial.py
 reorder_xml_saildrone.ipynb
 edit_xml_saildrone_newintake_trial.py~
 saildrone_getdatasetID.ipynb
 saildrone_getdatasetID.py
-edit_xml_saildrone_newintake_trial_v2.py~
 saildronemeta_datasetIDs_titles.csv
-saildronemeta_datasetIDs_titles.csv~
-edit_xml_saildrone_newintake_v2.5.py~
 saildronemeta_institutionnames.csv
 edit_xml_saildrone_newintake_v2.6.ipynb
 saildronemeta_mission_movement.csv
 saildronemeta_projectnames_missionnames.csv
-edit_xml_saildrone_newintake_v2.6.py~
 saildronemeta_static.csv
 edit_xml_saildrone_newintake_v2.ipynb
-saildronemeta_static.csv~
-'#edit_xml_saildrone_newintake_v2.py#'
 saildronemeta_untouched.csv
 edit_xml_saildrone_newintake_v2.py
 saildronemeta_wmo_ids.csv
-edit_xml_saildrone_newintake_v2.py~
 separate_datasetsxml.ipynb
 keepvars_GTS_xml.ipynb
 trial1.txt
 keepvars_GTS_xml.py
 trial1.xml
-keepvars_GTS_xml.py~
+edit_saildronedataset_xml.py
+edit_xml_repointing_all.ipynb
+edit_xml_repointing_saildrone_scidig.ipynb
+edit_xml_repointing_saildrone_scidig.py
+edit_xml_repointing_scidig.ipynb
+edit_xml_repointing_scidig.py
+edit_xml_saildrone_newintake_trial_v2.py
+keepvars_nocarbon_xml.ipynb
+keepvars_sdxml_GTS.ipynb
+keepvars_sdxml_GTS.py
+keepvars_sdxml_nocarbon.ipynb
+keepvars_sdxml_nocarbon.py
+separate_datasetsxml.py
